--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.450.0",
+    "@aws-sdk/client-s3": "^3.901.0",
     "aws-sdk": "^2.1692.0",
     "bcrypt": "^6.0.0",
     "client-s3": "github:aws-sdk/client-s3",
     "cors": "^2.8.5",
-    "csv-parser": "^3.2.0",
+    "csv-parse": "^6.1.0",
     "date-fns-tz": "^3.2.0",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
@@ -31,7 +31,7 @@
     "json2csv": "^6.0.0-alpha.2",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "papaparse": "^5.4.1",
     "pg": "^8.16.3",
@@ -43,12 +43,13 @@
     "@types/bcrypt": "^6.0.0",
     "@types/bcryptjs": "^3.0.0",
     "@types/cors": "^2.8.19",
+    "@types/csv-parse": "^1.2.5",
     "@types/express": "^5.0.3",
     "@types/jest": "^30.0.0",
     "@types/json2csv": "^5.0.7",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/multer": "^1.4.9",
+    "@types/multer": "^1.4.13",
     "@types/node": "^24.5.2",
     "@types/nodemailer": "^7.0.1",
     "@types/papaparse": "^5.3.9",
